deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: echoserver  
    namespace: orly
spec:
    replicas: 1
    selector:
        matchLabels:
          app: echoserver  
    template:
        metadata:
            labels: 
              app: echoserver  
        spec:
            containers:
                - name: echoserver  
                  image: k8s.gcr.io/echoserver:1.4
                  ports:
                     - containerPort: 8080
