service.yml
kind: Service
apiVersion: v1
metadata:
    name: echoserver
    namespace: orly
spec:
    selector:
        app: echoserver
    ports:
        - protocol: TCP
          port: 8080
