ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: echoserver 
  namespace: orly
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`orly-echoserver.192-168-68-3.nip.io`)
    kind: Rule
    services:
    - name: echoserver
      port: 8080
